--- a/internal/site/src/locales/cs/cs.po
+++ b/internal/site/src/locales/cs/cs.po
@@ -46,11 +46,7 @@ msgstr "1 hodina"
 #. Load average
 #: src/components/charts/load-average-chart.tsx
 msgid "1 min"
-msgstr ""
-
-#: src/lib/utils.ts
-msgid "1 minute"
-msgstr "1 minuta"
+msgstr "1 min"
 
 #: src/lib/utils.ts
 msgid "1 minute"
@@ -67,7 +63,7 @@ msgstr "12 hodin"
 #. Load average
 #: src/components/charts/load-average-chart.tsx
 msgid "15 min"
-msgstr ""
+msgstr "15 min"
 
 #: src/lib/utils.ts
 msgid "24 hours"
@@ -80,7 +76,7 @@ msgstr "30 dní"
 #. Load average
 #: src/components/charts/load-average-chart.tsx
 msgid "5 min"
-msgstr ""
+msgstr "5 min"
 
 #. Table column
 #: src/components/routes/settings/tokens-fingerprints.tsx
@@ -120,11 +116,11 @@ msgstr "Upravit možnosti zobrazení pro grafy."
 #: src/components/command-palette.tsx
 #: src/components/command-palette.tsx
 msgid "Admin"
-msgstr ""
+msgstr "Administrátor"
 
 #: src/components/systems-table/systems-table-columns.tsx
 msgid "Agent"
-msgstr ""
+msgstr "Agent"
 
 #: src/components/command-palette.tsx
 #: src/components/routes/settings/alerts-history-data-table.tsx
@@ -217,17 +213,17 @@ msgstr "Beszel používá <0>Shoutrrr</0> k integraci s populárními notifikač
 
 #: src/components/add-system.tsx
 msgid "Binary"
-msgstr ""
+msgstr "Binární"
 
 #: src/components/routes/settings/general.tsx
 #: src/components/routes/settings/general.tsx
 msgid "Bits (Kbps, Mbps, Gbps)"
-msgstr ""
+msgstr "Bity (Kbps, Mbps, Gbps)"
 
 #: src/components/routes/settings/general.tsx
 #: src/components/routes/settings/general.tsx
 msgid "Bytes (KB/s, MB/s, GB/s)"
-msgstr ""
+msgstr "Byty (KB/s, MB/s, GB/s)"
 
 #: src/components/charts/mem-chart.tsx
 msgid "Cache / Buffers"
@@ -237,6 +233,10 @@ msgstr "Cache / vyrovnávací paměť"
 #: src/components/systems-table/systems-table-columns.tsx
 msgid "Cancel"
 msgstr "Zrušit"
+
+#: src/components/routes/system/smart-table.tsx
+msgid "Capacity"
+msgstr "Kapacita"
 
 #: src/components/routes/settings/config-yaml.tsx
 msgid "Caution - potential data loss"
@@ -282,6 +282,10 @@ msgstr "Zkontrolujte službu upozornění"
 #: src/components/containers-table/containers-table.tsx
 msgid "Click on a container to view more information."
 msgstr "Klikněte na kontejner pro zobrazení dalších informací."
+
+#: src/components/routes/system/smart-table.tsx
+msgid "Click on a device to view more information."
+msgstr "Klikněte na zařízení pro zobrazení dalších informací."
 
 #: src/components/systems-table/systems-table.tsx
 msgid "Click on a system to view more information."
@@ -401,6 +405,11 @@ msgstr "Kumulativní odeslání"
 msgid "Current state"
 msgstr "Aktuální stav"
 
+#. Power Cycles
+#: src/components/routes/system/smart-table.tsx
+msgid "Cycles"
+msgstr "Cykly"
+
 #: src/components/command-palette.tsx
 msgid "Dashboard"
 msgstr "Přehled"
@@ -420,7 +429,11 @@ msgstr "Smazat identifikátor"
 
 #: src/components/containers-table/containers-table.tsx
 msgid "Detail"
-msgstr ""
+msgstr "Detail"
+
+#: src/components/routes/system/smart-table.tsx
+msgid "Device"
+msgstr "Zařízení"
 
 #. Context: Battery state
 #: src/lib/i18n.ts
@@ -429,11 +442,11 @@ msgstr "Vybíjení"
 
 #: src/components/systems-table/systems-table-columns.tsx
 msgid "Disk"
-msgstr ""
+msgstr "Disk"
 
 #: src/components/routes/system.tsx
 msgid "Disk I/O"
-msgstr ""
+msgstr "Disk I/O"
 
 #: src/components/routes/settings/general.tsx
 msgid "Disk unit"
@@ -494,7 +507,7 @@ msgstr "Upravit"
 #: src/components/login/forgot-pass-form.tsx
 #: src/components/login/otp-forms.tsx
 msgid "Email"
-msgstr ""
+msgstr "Email"
 
 #: src/components/routes/settings/notifications.tsx
 msgid "Email notifications"
@@ -538,7 +551,7 @@ msgstr "Stávající systémy, které nejsou definovány v <0>config.yml</0>, bu
 
 #: src/components/routes/settings/alerts-history-data-table.tsx
 msgid "Export"
-msgstr ""
+msgstr "Exportovat"
 
 #: src/components/routes/settings/config-yaml.tsx
 msgid "Export configuration"
@@ -551,6 +564,10 @@ msgstr "Exportovat aktuální konfiguraci systémů."
 #: src/components/routes/settings/general.tsx
 msgid "Fahrenheit (°F)"
 msgstr "Fahrenheita (°F)"
+
+#: src/components/routes/system/smart-table.tsx
+msgid "Failed Attributes:"
+msgstr "Neúspěšné atributy:"
 
 #: src/lib/api.ts
 msgid "Failed to authenticate"
@@ -572,6 +589,7 @@ msgstr "Nepodařilo se aktualizovat upozornění"
 #: src/components/containers-table/containers-table.tsx
 #: src/components/routes/settings/alerts-history-data-table.tsx
 #: src/components/routes/system.tsx
+#: src/components/routes/system/smart-table.tsx
 #: src/components/systems-table/systems-table.tsx
 msgid "Filter..."
 msgstr "Filtr..."
@@ -579,6 +597,10 @@ msgstr "Filtr..."
 #: src/components/routes/settings/tokens-fingerprints.tsx
 msgid "Fingerprint"
 msgstr "Otisk"
+
+#: src/components/routes/system/smart-table.tsx
+msgid "Firmware"
+msgstr "Firmware"
 
 #: src/components/alerts/alerts-sheet.tsx
 msgid "For <0>{min}</0> {min, plural, one {minute} other {minutes}}"
@@ -652,7 +674,7 @@ msgstr "Neplatná e-mailová adresa."
 #. Linux kernel
 #: src/components/routes/system.tsx
 msgid "Kernel"
-msgstr ""
+msgstr "Jádro"
 
 #: src/components/routes/settings/general.tsx
 msgid "Language"
@@ -734,6 +756,10 @@ msgstr "Využití paměti"
 msgid "Memory usage of docker containers"
 msgstr "Využití paměti docker kontejnerů"
 
+#: src/components/routes/system/smart-table.tsx
+msgid "Model"
+msgstr "Model"
+
 #: src/components/add-system.tsx
 #: src/components/alerts-history-columns.tsx
 #: src/components/containers-table/containers-table-columns.tsx
@@ -766,9 +792,16 @@ msgid "No results found."
 msgstr "Nenalezeny žádné výskyty."
 
 #: src/components/containers-table/containers-table.tsx
+#: src/components/containers-table/containers-table.tsx
+#: src/components/containers-table/containers-table.tsx
 #: src/components/routes/settings/alerts-history-data-table.tsx
+#: src/components/routes/system/smart-table.tsx
 msgid "No results."
 msgstr "Žádné výsledky."
+
+#: src/components/routes/system/smart-table.tsx
+msgid "No S.M.A.R.T. attributes available for this device."
+msgstr "Pro toto zařízení nejsou k dispozici žádné atributy S.M.A.R.T."
 
 #: src/components/systems-table/systems-table.tsx
 #: src/components/systems-table/systems-table.tsx
@@ -886,7 +919,12 @@ msgstr "Přihlaste se prosím k vašemu účtu"
 
 #: src/components/add-system.tsx
 msgid "Port"
-msgstr ""
+msgstr "Port"
+
+#. Power On Time
+#: src/components/routes/system/smart-table.tsx
+msgid "Power On"
+msgstr "Zapnutí"
 
 #: src/components/routes/system.tsx
 #: src/components/routes/system.tsx
@@ -947,6 +985,14 @@ msgstr "Změnit token"
 msgid "Rows per page"
 msgstr "Řádků na stránku"
 
+#: src/components/routes/system/smart-table.tsx
+msgid "S.M.A.R.T. Details"
+msgstr "S.M.A.R.T. Detaily"
+
+#: src/components/routes/system/smart-table.tsx
+msgid "S.M.A.R.T. Self-Test"
+msgstr "S.M.A.R.T. Vlastní test"
+
 #: src/components/routes/settings/notifications.tsx
 msgid "Save address using enter key or comma. Leave blank to disable email notifications."
 msgstr "Adresu uložte pomocí klávesy enter nebo čárky. Pro deaktivaci e-mailových oznámení ponechte prázdné pole."
@@ -975,6 +1021,10 @@ msgstr "Podívejte se na <0>nastavení upozornění</0> pro nastavení toho, jak
 #: src/components/routes/system.tsx
 msgid "Sent"
 msgstr "Odeslat"
+
+#: src/components/routes/system/smart-table.tsx
+msgid "Serial Number"
+msgstr "Sériové číslo"
 
 #: src/components/routes/settings/general.tsx
 msgid "Set percentage thresholds for meter colors."
@@ -1009,6 +1059,7 @@ msgid "State"
 msgstr "Stav"
 
 #: src/components/containers-table/containers-table-columns.tsx
+#: src/components/routes/system/smart-table.tsx
 #: src/components/systems-table/systems-table.tsx
 #: src/lib/alerts.ts
 msgid "Status"
@@ -1047,6 +1098,7 @@ msgid "Table"
 msgstr "Tabulka"
 
 #. Temperature label in systems table
+#: src/components/routes/system/smart-table.tsx
 #: src/components/systems-table/systems-table-columns.tsx
 msgid "Temp"
 msgstr "Teplota"
@@ -1066,7 +1118,7 @@ msgstr "Teploty systémových senzorů"
 
 #: src/components/routes/settings/notifications.tsx
 msgid "Test <0>URL</0>"
-msgstr ""
+msgstr "Testovat <0>URL</0>"
 
 #: src/components/routes/settings/notifications.tsx
 msgid "Test notification sent"
@@ -1112,7 +1164,7 @@ msgstr "Přepnout motiv"
 #: src/components/add-system.tsx
 #: src/components/routes/settings/tokens-fingerprints.tsx
 msgid "Token"
-msgstr ""
+msgstr "Token"
 
 #: src/components/command-palette.tsx
 #: src/components/routes/settings/layout.tsx
@@ -1171,6 +1223,10 @@ msgstr "Spouští se, když se změní dostupnost"
 #: src/lib/alerts.ts
 msgid "Triggers when usage of any disk exceeds a threshold"
 msgstr "Spustí se, když využití disku překročí prahovou hodnotu"
+
+#: src/components/routes/system/smart-table.tsx
+msgid "Type"
+msgstr "Typ"
 
 #. Temperature / network units
 #: src/components/routes/settings/general.tsx
@@ -1297,4 +1353,3 @@ msgstr "YAML konfigurace"
 #: src/components/routes/settings/layout.tsx
 msgid "Your user settings have been updated."
 msgstr "Vaše uživatelská nastavení byla aktualizována."
-
