--- a/internal/site/src/locales/it/it.po
+++ b/internal/site/src/locales/it/it.po
@@ -46,11 +46,7 @@ msgstr "1 ora"
 #. Load average
 #: src/components/charts/load-average-chart.tsx
 msgid "1 min"
-msgstr ""
-
-#: src/lib/utils.ts
-msgid "1 minute"
-msgstr "1 minuto"
+msgstr "1 min"
 
 #: src/lib/utils.ts
 msgid "1 minute"
@@ -67,7 +63,7 @@ msgstr "12 ore"
 #. Load average
 #: src/components/charts/load-average-chart.tsx
 msgid "15 min"
-msgstr ""
+msgstr "15 min"
 
 #: src/lib/utils.ts
 msgid "24 hours"
@@ -80,7 +76,7 @@ msgstr "30 giorni"
 #. Load average
 #: src/components/charts/load-average-chart.tsx
 msgid "5 min"
-msgstr ""
+msgstr "5 min"
 
 #. Table column
 #: src/components/routes/settings/tokens-fingerprints.tsx
@@ -238,13 +234,17 @@ msgstr "Cache / Buffer"
 msgid "Cancel"
 msgstr "Annulla"
 
+#: src/components/routes/system/smart-table.tsx
+msgid "Capacity"
+msgstr "Capacità"
+
 #: src/components/routes/settings/config-yaml.tsx
 msgid "Caution - potential data loss"
 msgstr "Attenzione - possibile perdita di dati"
 
 #: src/components/routes/settings/general.tsx
 msgid "Celsius (°C)"
-msgstr ""
+msgstr "Celsius (°C)"
 
 #: src/components/routes/settings/general.tsx
 msgid "Change display units for metrics."
@@ -282,6 +282,10 @@ msgstr "Controlla il tuo servizio di notifica"
 #: src/components/containers-table/containers-table.tsx
 msgid "Click on a container to view more information."
 msgstr "Fare clic su un contenitore per visualizzare ulteriori informazioni."
+
+#: src/components/routes/system/smart-table.tsx
+msgid "Click on a device to view more information."
+msgstr "Fare clic su un dispositivo per visualizzare più informazioni."
 
 #: src/components/systems-table/systems-table.tsx
 msgid "Click on a system to view more information."
@@ -367,7 +371,7 @@ msgstr "Copia YAML"
 #: src/components/containers-table/containers-table-columns.tsx
 #: src/components/systems-table/systems-table-columns.tsx
 msgid "CPU"
-msgstr ""
+msgstr "CPU"
 
 #: src/components/routes/system.tsx
 #: src/components/routes/system.tsx
@@ -401,6 +405,11 @@ msgstr "Upload cumulativo"
 msgid "Current state"
 msgstr "Stato attuale"
 
+#. Power Cycles
+#: src/components/routes/system/smart-table.tsx
+msgid "Cycles"
+msgstr "Cicli"
+
 #: src/components/command-palette.tsx
 msgid "Dashboard"
 msgstr "Cruscotto"
@@ -421,6 +430,10 @@ msgstr "Elimina impronta digitale"
 #: src/components/containers-table/containers-table.tsx
 msgid "Detail"
 msgstr "Dettagli"
+
+#: src/components/routes/system/smart-table.tsx
+msgid "Device"
+msgstr "Dispositivo"
 
 #. Context: Battery state
 #: src/lib/i18n.ts
@@ -494,7 +507,7 @@ msgstr "Modifica"
 #: src/components/login/forgot-pass-form.tsx
 #: src/components/login/otp-forms.tsx
 msgid "Email"
-msgstr ""
+msgstr "Email"
 
 #: src/components/routes/settings/notifications.tsx
 msgid "Email notifications"
@@ -550,7 +563,11 @@ msgstr "Esporta la configurazione attuale dei tuoi sistemi."
 
 #: src/components/routes/settings/general.tsx
 msgid "Fahrenheit (°F)"
-msgstr ""
+msgstr "Fahrenheit (°F)"
+
+#: src/components/routes/system/smart-table.tsx
+msgid "Failed Attributes:"
+msgstr "Attributi falliti:"
 
 #: src/lib/api.ts
 msgid "Failed to authenticate"
@@ -572,6 +589,7 @@ msgstr "Aggiornamento dell'avviso fallito"
 #: src/components/containers-table/containers-table.tsx
 #: src/components/routes/settings/alerts-history-data-table.tsx
 #: src/components/routes/system.tsx
+#: src/components/routes/system/smart-table.tsx
 #: src/components/systems-table/systems-table.tsx
 msgid "Filter..."
 msgstr "Filtra..."
@@ -579,6 +597,10 @@ msgstr "Filtra..."
 #: src/components/routes/settings/tokens-fingerprints.tsx
 msgid "Fingerprint"
 msgstr "Impronta digitale"
+
+#: src/components/routes/system/smart-table.tsx
+msgid "Firmware"
+msgstr "Firmware"
 
 #: src/components/alerts/alerts-sheet.tsx
 msgid "For <0>{min}</0> {min, plural, one {minute} other {minutes}}"
@@ -629,7 +651,7 @@ msgstr "Comando Homebrew"
 
 #: src/components/add-system.tsx
 msgid "Host / IP"
-msgstr ""
+msgstr "Host / IP"
 
 #. Context: Battery state
 #: src/lib/i18n.ts
@@ -652,7 +674,7 @@ msgstr "Indirizzo email non valido."
 #. Linux kernel
 #: src/components/routes/system.tsx
 msgid "Kernel"
-msgstr ""
+msgstr "Kernel"
 
 #: src/components/routes/settings/general.tsx
 msgid "Language"
@@ -718,7 +740,7 @@ msgstr "Istruzioni di configurazione manuale"
 #. Chart select field. Please try to keep this short.
 #: src/components/routes/system.tsx
 msgid "Max 1 min"
-msgstr ""
+msgstr "Max 1 min"
 
 #: src/components/containers-table/containers-table-columns.tsx
 #: src/components/systems-table/systems-table-columns.tsx
@@ -733,6 +755,10 @@ msgstr "Utilizzo Memoria"
 #: src/components/routes/system.tsx
 msgid "Memory usage of docker containers"
 msgstr "Utilizzo della memoria dei container Docker"
+
+#: src/components/routes/system/smart-table.tsx
+msgid "Model"
+msgstr "Modello"
 
 #: src/components/add-system.tsx
 #: src/components/alerts-history-columns.tsx
@@ -766,9 +792,16 @@ msgid "No results found."
 msgstr "Nessun risultato trovato."
 
 #: src/components/containers-table/containers-table.tsx
+#: src/components/containers-table/containers-table.tsx
+#: src/components/containers-table/containers-table.tsx
 #: src/components/routes/settings/alerts-history-data-table.tsx
+#: src/components/routes/system/smart-table.tsx
 msgid "No results."
 msgstr "Nessun risultato."
+
+#: src/components/routes/system/smart-table.tsx
+msgid "No S.M.A.R.T. attributes available for this device."
+msgstr "Nessun attributo S.M.A.R.T. disponibile per questo dispositivo."
 
 #: src/components/systems-table/systems-table.tsx
 #: src/components/systems-table/systems-table.tsx
@@ -825,7 +858,7 @@ msgstr "Pagine / Impostazioni"
 #: src/components/login/auth-form.tsx
 #: src/components/login/auth-form.tsx
 msgid "Password"
-msgstr ""
+msgstr "Password"
 
 #: src/components/login/auth-form.tsx
 msgid "Password must be at least 8 characters."
@@ -888,6 +921,11 @@ msgstr "Si prega di accedere al proprio account"
 msgid "Port"
 msgstr "Porta"
 
+#. Power On Time
+#: src/components/routes/system/smart-table.tsx
+msgid "Power On"
+msgstr "Accensione"
+
 #: src/components/routes/system.tsx
 #: src/components/routes/system.tsx
 msgid "Precise utilization at the recorded time"
@@ -947,6 +985,14 @@ msgstr "Ruota token"
 msgid "Rows per page"
 msgstr "Righe per pagina"
 
+#: src/components/routes/system/smart-table.tsx
+msgid "S.M.A.R.T. Details"
+msgstr "Dettagli S.M.A.R.T."
+
+#: src/components/routes/system/smart-table.tsx
+msgid "S.M.A.R.T. Self-Test"
+msgstr "Autotest S.M.A.R.T."
+
 #: src/components/routes/settings/notifications.tsx
 msgid "Save address using enter key or comma. Leave blank to disable email notifications."
 msgstr "Salva l'indirizzo usando il tasto invio o la virgola. Lascia vuoto per disabilitare le notifiche email."
@@ -975,6 +1021,10 @@ msgstr "Vedi <0>impostazioni di notifica</0> per configurare come ricevere gli a
 #: src/components/routes/system.tsx
 msgid "Sent"
 msgstr "Inviato"
+
+#: src/components/routes/system/smart-table.tsx
+msgid "Serial Number"
+msgstr "Numero di serie"
 
 #: src/components/routes/settings/general.tsx
 msgid "Set percentage thresholds for meter colors."
@@ -1009,6 +1059,7 @@ msgid "State"
 msgstr "Stato"
 
 #: src/components/containers-table/containers-table-columns.tsx
+#: src/components/routes/system/smart-table.tsx
 #: src/components/systems-table/systems-table.tsx
 #: src/lib/alerts.ts
 msgid "Status"
@@ -1047,6 +1098,7 @@ msgid "Table"
 msgstr "Tabella"
 
 #. Temperature label in systems table
+#: src/components/routes/system/smart-table.tsx
 #: src/components/systems-table/systems-table-columns.tsx
 msgid "Temp"
 msgstr "Temperatura"
@@ -1066,7 +1118,7 @@ msgstr "Temperature dei sensori di sistema"
 
 #: src/components/routes/settings/notifications.tsx
 msgid "Test <0>URL</0>"
-msgstr ""
+msgstr "Test <0>URL</0>"
 
 #: src/components/routes/settings/notifications.tsx
 msgid "Test notification sent"
@@ -1112,7 +1164,7 @@ msgstr "Attiva/disattiva tema"
 #: src/components/add-system.tsx
 #: src/components/routes/settings/tokens-fingerprints.tsx
 msgid "Token"
-msgstr ""
+msgstr "Token"
 
 #: src/components/command-palette.tsx
 #: src/components/routes/settings/layout.tsx
@@ -1171,6 +1223,10 @@ msgstr "Attiva quando lo stato passa tra up e down"
 #: src/lib/alerts.ts
 msgid "Triggers when usage of any disk exceeds a threshold"
 msgstr "Attiva quando l'utilizzo di un disco supera una soglia"
+
+#: src/components/routes/system/smart-table.tsx
+msgid "Type"
+msgstr "Tipo"
 
 #. Temperature / network units
 #: src/components/routes/settings/general.tsx
@@ -1297,4 +1353,3 @@ msgstr "Configurazione YAML"
 #: src/components/routes/settings/layout.tsx
 msgid "Your user settings have been updated."
 msgstr "Le impostazioni utente sono state aggiornate."
-
