--- a/internal/site/src/locales/zh-HK/zh-HK.po
+++ b/internal/site/src/locales/zh-HK/zh-HK.po
@@ -234,6 +234,10 @@ msgstr "快取 / 緩衝區"
 msgid "Cancel"
 msgstr "取消"
 
+#: src/components/routes/system/smart-table.tsx
+msgid "Capacity"
+msgstr "容量"
+
 #: src/components/routes/settings/config-yaml.tsx
 msgid "Caution - potential data loss"
 msgstr "注意 - 可能遺失資料"
@@ -278,6 +282,10 @@ msgstr "檢查您的通知服務"
 #: src/components/containers-table/containers-table.tsx
 msgid "Click on a container to view more information."
 msgstr "點擊容器以查看更多資訊。"
+
+#: src/components/routes/system/smart-table.tsx
+msgid "Click on a device to view more information."
+msgstr "點擊裝置以查看更多資訊。"
 
 #: src/components/systems-table/systems-table.tsx
 msgid "Click on a system to view more information."
@@ -363,7 +371,7 @@ msgstr "複製YAML"
 #: src/components/containers-table/containers-table-columns.tsx
 #: src/components/systems-table/systems-table-columns.tsx
 msgid "CPU"
-msgstr ""
+msgstr "處理器"
 
 #: src/components/routes/system.tsx
 #: src/components/routes/system.tsx
@@ -397,6 +405,11 @@ msgstr "累計上傳"
 msgid "Current state"
 msgstr "目前狀態"
 
+#. Power Cycles
+#: src/components/routes/system/smart-table.tsx
+msgid "Cycles"
+msgstr "週期"
+
 #: src/components/command-palette.tsx
 msgid "Dashboard"
 msgstr "控制面板"
@@ -417,6 +430,10 @@ msgstr "刪除指紋"
 #: src/components/containers-table/containers-table.tsx
 msgid "Detail"
 msgstr "詳細資訊"
+
+#: src/components/routes/system/smart-table.tsx
+msgid "Device"
+msgstr "裝置"
 
 #. Context: Battery state
 #: src/lib/i18n.ts
@@ -548,6 +565,10 @@ msgstr "匯出您現在的系統設定。"
 msgid "Fahrenheit (°F)"
 msgstr "華氏 (°F)"
 
+#: src/components/routes/system/smart-table.tsx
+msgid "Failed Attributes:"
+msgstr "失敗屬性："
+
 #: src/lib/api.ts
 msgid "Failed to authenticate"
 msgstr "認證失敗"
@@ -568,6 +589,7 @@ msgstr "更新警報失敗"
 #: src/components/containers-table/containers-table.tsx
 #: src/components/routes/settings/alerts-history-data-table.tsx
 #: src/components/routes/system.tsx
+#: src/components/routes/system/smart-table.tsx
 #: src/components/systems-table/systems-table.tsx
 msgid "Filter..."
 msgstr "篩選..."
@@ -575,6 +597,10 @@ msgstr "篩選..."
 #: src/components/routes/settings/tokens-fingerprints.tsx
 msgid "Fingerprint"
 msgstr "指紋"
+
+#: src/components/routes/system/smart-table.tsx
+msgid "Firmware"
+msgstr "韌體"
 
 #: src/components/alerts/alerts-sheet.tsx
 msgid "For <0>{min}</0> {min, plural, one {minute} other {minutes}}"
@@ -648,7 +674,7 @@ msgstr "無效的電子郵件地址。"
 #. Linux kernel
 #: src/components/routes/system.tsx
 msgid "Kernel"
-msgstr ""
+msgstr "核心"
 
 #: src/components/routes/settings/general.tsx
 msgid "Language"
@@ -730,6 +756,10 @@ msgstr "記憶體使用"
 msgid "Memory usage of docker containers"
 msgstr "Docker 容器的記憶體使用量"
 
+#: src/components/routes/system/smart-table.tsx
+msgid "Model"
+msgstr "型號"
+
 #: src/components/add-system.tsx
 #: src/components/alerts-history-columns.tsx
 #: src/components/containers-table/containers-table-columns.tsx
@@ -762,9 +792,16 @@ msgid "No results found."
 msgstr "未找到結果。"
 
 #: src/components/containers-table/containers-table.tsx
+#: src/components/containers-table/containers-table.tsx
+#: src/components/containers-table/containers-table.tsx
 #: src/components/routes/settings/alerts-history-data-table.tsx
+#: src/components/routes/system/smart-table.tsx
 msgid "No results."
 msgstr "沒有結果。"
+
+#: src/components/routes/system/smart-table.tsx
+msgid "No S.M.A.R.T. attributes available for this device."
+msgstr "此裝置沒有可用的 S.M.A.R.T. 屬性。"
 
 #: src/components/systems-table/systems-table.tsx
 #: src/components/systems-table/systems-table.tsx
@@ -884,6 +921,11 @@ msgstr "請登入您的帳號"
 msgid "Port"
 msgstr "端口"
 
+#. Power On Time
+#: src/components/routes/system/smart-table.tsx
+msgid "Power On"
+msgstr "電源開啟"
+
 #: src/components/routes/system.tsx
 #: src/components/routes/system.tsx
 msgid "Precise utilization at the recorded time"
@@ -943,6 +985,14 @@ msgstr "輪換令牌"
 msgid "Rows per page"
 msgstr "每頁行數"
 
+#: src/components/routes/system/smart-table.tsx
+msgid "S.M.A.R.T. Details"
+msgstr "S.M.A.R.T. 詳情"
+
+#: src/components/routes/system/smart-table.tsx
+msgid "S.M.A.R.T. Self-Test"
+msgstr "S.M.A.R.T. 自檢"
+
 #: src/components/routes/settings/notifications.tsx
 msgid "Save address using enter key or comma. Leave blank to disable email notifications."
 msgstr "使用回車鍵或逗號保存地址。留空以禁用電子郵件通知。"
@@ -971,6 +1021,10 @@ msgstr "查看<0>通知設置</0>以配置您接收警報的方式。"
 #: src/components/routes/system.tsx
 msgid "Sent"
 msgstr "發送"
+
+#: src/components/routes/system/smart-table.tsx
+msgid "Serial Number"
+msgstr "序列號"
 
 #: src/components/routes/settings/general.tsx
 msgid "Set percentage thresholds for meter colors."
@@ -1005,6 +1059,7 @@ msgid "State"
 msgstr "狀態"
 
 #: src/components/containers-table/containers-table-columns.tsx
+#: src/components/routes/system/smart-table.tsx
 #: src/components/systems-table/systems-table.tsx
 #: src/lib/alerts.ts
 msgid "Status"
@@ -1043,6 +1098,7 @@ msgid "Table"
 msgstr "表格"
 
 #. Temperature label in systems table
+#: src/components/routes/system/smart-table.tsx
 #: src/components/systems-table/systems-table-columns.tsx
 msgid "Temp"
 msgstr "溫度"
@@ -1167,6 +1223,10 @@ msgstr "當狀態在上和下之間切換時觸發"
 #: src/lib/alerts.ts
 msgid "Triggers when usage of any disk exceeds a threshold"
 msgstr "當任何磁碟的使用超過閾值時觸發"
+
+#: src/components/routes/system/smart-table.tsx
+msgid "Type"
+msgstr "類型"
 
 #. Temperature / network units
 #: src/components/routes/settings/general.tsx
@@ -1293,4 +1353,3 @@ msgstr "YAML配置"
 #: src/components/routes/settings/layout.tsx
 msgid "Your user settings have been updated."
 msgstr "您的用戶設置已更新。"
-
