--- a/internal/site/src/locales/he/he.po
+++ b/internal/site/src/locales/he/he.po
@@ -1,17 +1,22 @@
 msgid ""
 msgstr ""
-"POT-Creation-Date: 2025-10-30 16:35-0400\n"
+"POT-Creation-Date: 2024-11-01 11:30-0400\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf-8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: @lingui/cli\n"
 "Language: he\n"
-"Project-Id-Version: \n"
+"Project-Id-Version: beszel\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2025-10-30 20:47\n"
+"PO-Revision-Date: 2025-10-30 21:53\n"
 "Last-Translator: \n"
-"Language-Team: \n"
-"Plural-Forms: \n"
+"Language-Team: Hebrew\n"
+"Plural-Forms: nplurals=4; plural=n%100==1 ? 0 : n%100==2 ? 1 : n%100==3 || n%100==4 ? 2 : 3;\n"
+"X-Crowdin-Project: beszel\n"
+"X-Crowdin-Project-ID: 733311\n"
+"X-Crowdin-Language: he\n"
+"X-Crowdin-File: /main/internal/site/src/locales/en/en.po\n"
+"X-Crowdin-File-ID: 32\n"
 
 #. placeholder {0}: table.getFilteredSelectedRowModel().rows.length
 #. placeholder {1}: table.getFilteredRowModel().rows.length
@@ -170,7 +175,7 @@ msgstr "צריכת חשמל ממוצעת של GPUs"
 
 #: src/components/routes/system.tsx
 msgid "Average system-wide CPU utilization"
-msgstr "ניצול ממוצע של CPU ברמת המערכת"
+msgstr "ניצול ממוצע כלל-מערכתי של CPU"
 
 #. placeholder {0}: gpu.n
 #: src/components/routes/system.tsx
@@ -215,7 +220,7 @@ msgstr "ביטים (Kbps, Mbps, Gbps)"
 #: src/components/routes/settings/general.tsx
 #: src/components/routes/settings/general.tsx
 msgid "Bytes (KB/s, MB/s, GB/s)"
-msgstr "בייטים (KB/s, MB/s, GB/s)"
+msgstr "בתים (KB/s, MB/s, GB/s)"
 
 #: src/components/charts/mem-chart.tsx
 msgid "Cache / Buffers"
@@ -265,7 +270,7 @@ msgstr "בדוק את {email} לקישור איפוס."
 
 #: src/components/routes/settings/layout.tsx
 msgid "Check logs for more details."
-msgstr "בדוק יומנים לפרטים נוספים."
+msgstr "בדוק לוגים לפרטים נוספים"
 
 #: src/components/routes/settings/notifications.tsx
 msgid "Check your notification service"
@@ -294,7 +299,7 @@ msgstr "הוראות שורת פקודה"
 
 #: src/components/routes/settings/notifications.tsx
 msgid "Configure how you receive alert notifications."
-msgstr "הגדר כיצד אתה מקבל התראות."
+msgstr "הגדר כיצד לקבל התראות."
 
 #: src/components/login/auth-form.tsx
 #: src/components/login/auth-form.tsx
@@ -464,7 +469,7 @@ msgstr "שימוש זיכרון של Docker"
 
 #: src/components/routes/system.tsx
 msgid "Docker Network I/O"
-msgstr "רשת Docker I/O"
+msgstr "I/O של רשת Docker"
 
 #: src/components/command-palette.tsx
 msgid "Documentation"
@@ -484,7 +489,7 @@ msgstr "כבוי ({downSystemsLength})"
 
 #: src/components/routes/system/network-sheet.tsx
 msgid "Download"
-msgstr "הורד"
+msgstr "הורדה"
 
 #: src/components/alerts-history-columns.tsx
 msgid "Duration"
@@ -535,11 +540,11 @@ msgstr "שגיאה"
 #. placeholder {2}: alert.min
 #: src/components/active-alerts.tsx
 msgid "Exceeds {0}{1} in last {2, plural, one {# minute} other {# minutes}}"
-msgstr "עולה על {0}{1} ב-{2, plural, one {# דקה} other {# דקות}} האחרונות"
+msgstr "עלה על {0}{1} ב{2, plural, one {דקה האחרונה} other {-# הדקות האחרונות}}"
 
 #: src/components/routes/settings/config-yaml.tsx
 msgid "Existing systems not defined in <0>config.yml</0> will be deleted. Please make regular backups."
-msgstr "מערכות קיימות שלא מוגדרות ב-<0>config.yml</0> יימחקו. אנא בצע גיבויים קבועים."
+msgstr "מערכות קיימות שלא מוגדרות ב-<0>config.yml</0> יימחקו. אנא בצע גיבויים באופן קבוע."
 
 #: src/components/routes/settings/alerts-history-data-table.tsx
 msgid "Export"
@@ -1251,7 +1256,7 @@ msgstr "עודכן"
 
 #: src/components/routes/system/network-sheet.tsx
 msgid "Upload"
-msgstr "העלה"
+msgstr "העלאה"
 
 #: src/components/routes/system.tsx
 msgid "Uptime"
@@ -1288,7 +1293,7 @@ msgstr "צפה"
 
 #: src/components/routes/system/network-sheet.tsx
 msgid "View more"
-msgstr "צפה עוד"
+msgstr "צפה בעוד"
 
 #: src/components/routes/settings/alerts-history-data-table.tsx
 msgid "View your 200 most recent alerts."
