--- a/internal/site/src/locales/cs/cs.po
+++ b/internal/site/src/locales/cs/cs.po
@@ -50,10 +50,6 @@ msgid "1 minute"
 msgstr "1 minuta"
 
 #: src/lib/utils.ts
-msgid "1 minute"
-msgstr "1 minuta"
-
-#: src/lib/utils.ts
 msgid "1 week"
 msgstr "1 týden"
 
@@ -374,8 +370,17 @@ msgstr "Kopírovat YAML"
 msgid "CPU"
 msgstr "Procesor"
 
+#: src/components/routes/system/cpu-sheet.tsx
+msgid "CPU Cores"
+msgstr "CPU jádra"
+
+#: src/components/routes/system/cpu-sheet.tsx
+msgid "CPU Time Breakdown"
+msgstr "Rozdělení času CPU"
+
 #: src/components/routes/system.tsx
 #: src/components/routes/system.tsx
+#: src/components/routes/system/cpu-sheet.tsx
 #: src/lib/alerts.ts
 msgid "CPU Usage"
 msgstr "Využití procesoru"
@@ -837,6 +842,10 @@ msgstr "Otevřít menu"
 msgid "Or continue with"
 msgstr "Nebo pokračujte s"
 
+#: src/components/routes/system/cpu-sheet.tsx
+msgid "Other"
+msgstr "Jiné"
+
 #: src/components/alerts/alerts-sheet.tsx
 msgid "Overwrite existing alerts"
 msgstr "Přepsat existující upozornění"
@@ -885,6 +894,15 @@ msgstr "Pozastaveno"
 msgid "Paused ({pausedSystemsLength})"
 msgstr "Pozastaveno ({pausedSystemsLength})"
 
+#: src/components/routes/system/cpu-sheet.tsx
+#: src/components/routes/system/cpu-sheet.tsx
+msgid "Per-core average utilization"
+msgstr "Průměrné využití na jádro"
+
+#: src/components/routes/system/cpu-sheet.tsx
+msgid "Percentage of time spent in each state"
+msgstr "Procento času strávěného v každém stavu"
+
 #: src/components/routes/settings/notifications.tsx
 msgid "Please <0>configure an SMTP server</0> to ensure alerts are delivered."
 msgstr "<0>nakonfigurujte SMTP server</0> pro zajištění toho, aby byla upozornění doručena."
@@ -921,11 +939,6 @@ msgstr "Přihlaste se prosím k vašemu účtu"
 #: src/components/add-system.tsx
 msgid "Port"
 msgstr ""
-
-#. Power On Time
-#: src/components/routes/system/smart-table.tsx
-msgid "Power On"
-msgstr "Zapnutí"
 
 #. Power On Time
 #: src/components/routes/system/smart-table.tsx
@@ -1275,6 +1288,7 @@ msgstr "Doba provozu"
 #: src/components/routes/system.tsx
 #: src/components/routes/system.tsx
 #: src/components/routes/system.tsx
+#: src/components/routes/system/cpu-sheet.tsx
 msgid "Usage"
 msgstr "Využití"
 
@@ -1300,6 +1314,7 @@ msgstr "Hodnota"
 msgid "View"
 msgstr "Zobrazení"
 
+#: src/components/routes/system/cpu-sheet.tsx
 #: src/components/routes/system/network-sheet.tsx
 msgid "View more"
 msgstr "Zobrazit více"
@@ -1359,4 +1374,3 @@ msgstr "YAML konfigurace"
 #: src/components/routes/settings/layout.tsx
 msgid "Your user settings have been updated."
 msgstr "Vaše uživatelská nastavení byla aktualizována."
-
