--- a/internal/site/src/locales/sv/sv.po
+++ b/internal/site/src/locales/sv/sv.po
@@ -50,10 +50,6 @@ msgid "1 minute"
 msgstr "1 minut"
 
 #: src/lib/utils.ts
-msgid "1 minute"
-msgstr "1 minut"
-
-#: src/lib/utils.ts
 msgid "1 week"
 msgstr "1 vecka"
 
@@ -374,8 +370,17 @@ msgstr "Kopiera YAML"
 msgid "CPU"
 msgstr ""
 
+#: src/components/routes/system/cpu-sheet.tsx
+msgid "CPU Cores"
+msgstr "CPU-kärnor"
+
+#: src/components/routes/system/cpu-sheet.tsx
+msgid "CPU Time Breakdown"
+msgstr "CPU-tidsuppdelning"
+
 #: src/components/routes/system.tsx
 #: src/components/routes/system.tsx
+#: src/components/routes/system/cpu-sheet.tsx
 #: src/lib/alerts.ts
 msgid "CPU Usage"
 msgstr "CPU-användning"
@@ -565,10 +570,6 @@ msgstr "Exportera din nuvarande systemkonfiguration."
 #: src/components/routes/settings/general.tsx
 msgid "Fahrenheit (°F)"
 msgstr "Fahrenheit (°F)"
-
-#: src/components/routes/system/smart-table.tsx
-msgid "Failed Attributes:"
-msgstr "Misslyckade attribut:"
 
 #: src/components/routes/system/smart-table.tsx
 msgid "Failed Attributes:"
@@ -841,6 +842,10 @@ msgstr "Öppna menyn"
 msgid "Or continue with"
 msgstr "Eller fortsätt med"
 
+#: src/components/routes/system/cpu-sheet.tsx
+msgid "Other"
+msgstr "Annat"
+
 #: src/components/alerts/alerts-sheet.tsx
 msgid "Overwrite existing alerts"
 msgstr "Skriv över befintliga larm"
@@ -889,6 +894,15 @@ msgstr "Pausad"
 msgid "Paused ({pausedSystemsLength})"
 msgstr "Pausad ({pausedSystemsLength})"
 
+#: src/components/routes/system/cpu-sheet.tsx
+#: src/components/routes/system/cpu-sheet.tsx
+msgid "Per-core average utilization"
+msgstr "Genomsnittlig användning per kärna"
+
+#: src/components/routes/system/cpu-sheet.tsx
+msgid "Percentage of time spent in each state"
+msgstr "Procentandel av tid spenderad i varje tillstånd"
+
 #: src/components/routes/settings/notifications.tsx
 msgid "Please <0>configure an SMTP server</0> to ensure alerts are delivered."
 msgstr "Vänligen <0>konfigurera en SMTP-server</0> för att säkerställa att larm levereras."
@@ -925,11 +939,6 @@ msgstr "Vänligen logga in på ditt konto"
 #: src/components/add-system.tsx
 msgid "Port"
 msgstr ""
-
-#. Power On Time
-#: src/components/routes/system/smart-table.tsx
-msgid "Power On"
-msgstr "Påslagen"
 
 #. Power On Time
 #: src/components/routes/system/smart-table.tsx
@@ -1279,6 +1288,7 @@ msgstr "Drifttid"
 #: src/components/routes/system.tsx
 #: src/components/routes/system.tsx
 #: src/components/routes/system.tsx
+#: src/components/routes/system/cpu-sheet.tsx
 msgid "Usage"
 msgstr "Användning"
 
@@ -1304,6 +1314,7 @@ msgstr "Värde"
 msgid "View"
 msgstr "Visa"
 
+#: src/components/routes/system/cpu-sheet.tsx
 #: src/components/routes/system/network-sheet.tsx
 msgid "View more"
 msgstr "Visa mer"
@@ -1363,4 +1374,3 @@ msgstr "YAML-konfiguration"
 #: src/components/routes/settings/layout.tsx
 msgid "Your user settings have been updated."
 msgstr "Dina användarinställningar har uppdaterats."
-
